Changed link blue to improve phone readability. Fixes #7.

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -45,7 +45,7 @@ p {
 }
 
 a {
-    color: #2f2fbf;
+    color: #4099ff;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
@@ -54,7 +54,7 @@ a {
 a:hover,
 a:focus {
     text-decoration: none;
-    color: #3C3CF2;
+    color: #66ADFF;
 }
 
 .light {
@@ -306,17 +306,17 @@ a:focus {
 }
 
 .btn-default {
-    border: 1px solid #2f2fbf;
-    color: #2f2fbf;
+    border: 1px solid #4099ff;
+    color: #4099ff;
     background-color: transparent;
 }
 
 .btn-default:hover,
 .btn-default:focus {
-    border: 1px solid #2f2fbf;
+    border: 1px solid #4099ff;
     outline: 0;
     color: #000;
-    background-color: #2f2fbf;
+    background-color: #4099ff;
 }
 
 ul.list-inline .bold {
